refactored properties file added